--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,13 @@ body {
   pointer-events: none;
   user-select: none;
 }
+
+.editor-content ul {
+  @apply list-disc pl-6;
+}
+.editor-content ol {
+  @apply list-decimal pl-6;
+}
+.editor-content blockquote {
+  @apply border-l-4 border-gray-300 pl-4 italic text-gray-600;
+}
