--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,11 @@ body {
   display: block;
   height: 1em; /* optional for extra padding */
 }
+
+#questionBox::-webkit-scrollbar {
+  height: 10px;
+}
+#questionBox::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.5);
+  border-radius: 5px;
+}
